
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int uint8_t ;


 scalar_t__ MCFG_OFFSET ;
 int acpitbl_checksum (void*,int) ;
 int acpitbl_write64 (void*,int,int ) ;
 int acpitbl_write8 (void*,int,int ) ;
 int memcpy (void*,int const*,int) ;
 int pci_ecfg_base () ;
 scalar_t__ tb ;

__attribute__((used)) static void
acpitbl_build_mcfg(void) {
 void *mcfg;
 static const uint8_t mcfg_tmpl[60] = {
  0x4D, 0x43, 0x46, 0x47, 0x3C, 0x00, 0x00, 0x00,
  0x01, 0x00, 0x42, 0x48, 0x59, 0x56, 0x45, 0x20,
  0x42, 0x56, 0x4D, 0x43, 0x46, 0x47, 0x20, 0x20,
  0x01, 0x00, 0x00, 0x00, 0x49, 0x4E, 0x54, 0x4C,
  0x28, 0x08, 0x14, 0x20, 0x00, 0x00, 0x00, 0x00,
  0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00,
  0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0xFF,
  0x00, 0x00, 0x00, 0x00
 };

 mcfg = (void *) (((uintptr_t) tb) + MCFG_OFFSET);

 memcpy(mcfg, mcfg_tmpl, 60);

 acpitbl_write64(mcfg, 0x2c, pci_ecfg_base());

 acpitbl_write8(mcfg, 0x9, acpitbl_checksum(mcfg, 60));
}
